--- a/style.css
+++ b/style.css
@@ -83,3 +83,46 @@ padding: 8px;
     background-color: white;
     cursor: pointer;
 }
+
+.about{
+    font-size: 55px;
+    font-family: 'Times New Roman', Times, serif;
+    font-weight: bold;
+    text-align: center;
+    padding: 5px;
+}
+
+.about-container{
+    display: flex;
+    justify-content: space-between;
+   
+    align-items: center;
+    color: black;
+    padding: 10px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+
+}
+
+.about-text{
+     padding: 10px;
+    
+}
+.about-title{
+    margin-top: 15px;
+    margin-bottom: 15px;
+    font-size: 24px;
+    font-weight: 800;
+    font-family: 'Times New Roman', Times, serif;
+
+}
+
+.about-descrip{
+    margin-bottom: 15px;
+    font-size: 18px;
+    line-height: 1.6;
+
+}
+
+
