--- a/style.css
+++ b/style.css
@@ -90,6 +90,7 @@ padding: 8px;
     font-weight: bold;
     text-align: center;
     padding: 5px;
+    background-color:rgb(232, 232, 232) ;
 }
 
 .about-container{
@@ -102,6 +103,7 @@ padding: 8px;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    background-color: rgb(232, 232, 232);
 
 }
 
@@ -125,4 +127,49 @@ padding: 8px;
 
 }
 
+.box-btn{
+    background-color: black;
+    color: aliceblue;
+    padding-bottom: 10px;
+}
+.box{
+    background-color: rgb(142, 142, 142);
+    box-shadow: 4px 4px 10px black;
+    height: 300px;
+    width: 250px;
+   text-align: center;
+    padding: 15px;
+    color: rgb(0, 0, 0);
+    border-radius: 10px;
+}
+.icon{
 
+    width: 150px;
+
+}
+
+.box-title{
+    font-size: 24px;
+    font-family: 'Times New Roman', Times, serif;
+    font-weight: bold;
+    padding-bottom: 10px;
+    color: rgb(121, 18, 0);
+}
+.box-dis{
+    padding-bottom: 10px;
+}
+
+.service-container{
+
+    display: flex;
+    justify-content: space-around;
+    padding: 10px;
+    padding-bottom: 25px;
+    background-image: url("./Image/background.png"),linear-gradient(45deg,rgb(8, 8, 8),rgb(52, 52, 52));
+}
+
+.box-service{
+    background-image: url("./Image/background.png"),linear-gradient(45deg,rgb(8, 8, 8),rgb(52, 52, 52));
+    color: aliceblue;
+    padding: 10px;
+}
